--- a/ASSESSMENT/a1/index.html
+++ b/ASSESSMENT/a1/index.html
@@ -22,7 +22,7 @@
     <img height="300px" src="images\download.jpg" alt="Bheem image" width="300px">
 
     <h2>Uploaded Image</h2>
-<img height="300px" src="http://127.0.0.1:5500/HTML/ASSESSMENT/a1/bheem.jpg" alt="Bheem image" width="300px">
+<img height="300px" src="bheem.jpg" alt="Bheem image" width="300px">
 
 <hr>
 <h2>Lists</h2>
